hello-rancher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-rancher
  namespace: hello-rancher
spec:
  ingressClassName: nginx
  rules:
    - host: test.kke-lab.cloud
      http:
        paths:
          - backend:
              service:
                port:
                  number: 80
                name: hello-rancher
            path: /
            pathType: Prefix
